--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
   # using tox
   toxify:
     docker:
-      - image: python:3.6
+      - image: circleci/python
 
     steps:
       - checkout
