--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - image: circleci/python:<< parameters.python >>
     steps:
       - checkout
-      - run: pip install tox
+      - run: pip install --user tox
       - run: tox -e << parameters.toxenv >>
 
 workflows:
